--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>fuck-world</title>
+    <link rel="icon" href="http://192.168.140.148/favicon.ico">
+    <title>多节点迷网系统</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but fuck-world doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
